fix: remove letter spacing of link button

--- a/vtr-ui/src/app/material.scss
+++ b/vtr-ui/src/app/material.scss
@@ -233,10 +233,6 @@ button:focus {
 		text-overflow: ellipsis;
 		white-space: nowrap;
 	}
-
-	&.link-button {
-		letter-spacing: 0.5px;
-	}
 }
 
 .mat-customize-button,
